Bug 79065 - [BDW bisected]GPU hang when doing de-interlace test with gst-launch-0.10
Summary: [BDW bisected]GPU hang when doing de-interlace test with gst-launch-0.10
Status: CLOSED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) All
: high major
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-22 09:26 UTC by zhixinx.liu
Modified: 2014-07-17 02:21 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
clear the surface with the right command on BLT (764 bytes, patch)
2014-05-23 14:16 UTC, haihao
Details | Splinter Review

Description zhixinx.liu 2014-05-22 09:26:55 UTC
GPU hang when doing de-interlace test, only weave mode find this problem.
regression fail: 
1. using kernel_20140415_nightly and X11R7_20140415_unstable to verify it. 
cannot find this problem. 
2. using kernel_20140428_nightly and X11R7_20140428_unstable to verify it. 
can find this problem. 
the bisect information will upload later.

1. Testing Env:
========================================================================
kernel:	3.15.0-rc5_drm-intel-nightly_367653_20140521
X11R7:	X11R7.unstable.2014-05-21.tar.gz
 
2. Testing Steps:
========================================================================
  1.start X window, and run following command:
    command line: gst-launch-0.10 filesrc location=/root/media_tools/deinterlace/vts_06_1_remux.ts ! tsdemux ! vaapidecode ! vaapipostproc deinterlace=1 deinterlace-method=2 ! vaapisink
  2.check the dmesg:
    [drm] stuck on render ring
    [drm] GPU HANG: ecode 0:0xabdffffb, in gst-launch-0.10 [5411], reason: Ring hung, action: reset
    [drm:i915_error_work_func] resetting chip
    [drm:i915_context_is_banned] *ERROR* gpu hanging too fast, banning!
    [drm:init_status_page] render ring hws offset: 0x00012000
    [drm:init_status_page] bsd ring hws offset: 0x00034000
    [drm:init_status_page] blitter ring hws offset: 0x00055000
    [drm:init_status_page] video enhancement ring hws offset: 0x00076000
	
3. Frequency of Occurence:
========================================================================
100%
Comment 1 zhixinx.liu 2014-05-23 09:36:20 UTC
it should be X11R7's issue, 
with same kernel(3.15.0-rc5_drm-intel-nightly_f5b0cc_20140522)
use X11R7.unstable.2014-04-15.tar.gz==> cannot find this problem
use X11R7.unstable.2014-04-28.tar.gz==> can find this problem

only BDW machine find this problem. both GT2 and GT3 can reproduce.
Comment 2 haihao 2014-05-23 11:25:57 UTC
The drive does nothing for weave mode, maybe it is caused by other components.
Could you give more detailed information, such as the commit in the package ?
Comment 3 zhixinx.liu 2014-05-23 11:50:43 UTC
X11R7.unstable.2014-04-15 component information:
Libva:                 (staging)960352aaf1e11891a533ce2c98b16edde24d6851
Libva_intel_driver:    (staging)4a3f17ae44bae58daf65dcc706332b28a6d478ac
Gstreamer10:           (1.0)4e880d4d1e151ea64f83c28b5c3e1bbc06c57903
Gst_plugins_base10:    (1.0)2dd3f028c1e6dea799d7496639f53220818b20b1
Gst_plugins_good10:    (1.0)643d425f51f81b56deec16c01162637546708ee5
Gst_plugins_bad10:     (1.0)0587ab41b4f9979e9cfc11011ed5c970569ee3d3
Gst_plugins_ugly10:    (1.0)c7c911b8320576429e4a4234a1e29ec7436e6814
Gst_plugins_vaapi10:   (master)e52d394b9e1e7124a141cc26675068e6fc2446a9
Gstreamer010:          (0.10)76fc67b18c38e7f6c9cfacc4e4d0ed11d3b2c548
Gst_plugins_base010:   (0.10)1e1e6eaf3f0dd11f6618154d9739cbe3e007d206
Gst_plugins_good010:   (0.10)5af6f5bfb6c3619a9ccc3b1681579aeb90e8b89a
Gst_plugins_bad010:    (0.10)cef47d85294a0dca38631f938b81a3f0dd6891bd
Gst_plugins_ugly010:   (0.10)5ddd97ff27ffeb03298be3a02ed18e8c2674d365
Gst_plugins_vaapi010:  (0.4)90713fdc442f27b4ea449b92660a294f7796f83e

X11R7.unstable.2014-04-28 component information:
Libva:                 (staging)0233b7f39e9f3513094d0f16151095a2528a6d3f
Libva_intel_driver:    (staging)00260be919d6ba377774bbd982e6768f12f2cb2c
Gst_plugins_base10:    (1.0)2dd3f028c1e6dea799d7496639f53220818b20b1
Gst_plugins_good10:    (1.0)643d425f51f81b56deec16c01162637546708ee5
Gst_plugins_bad10:     (1.0)0587ab41b4f9979e9cfc11011ed5c970569ee3d3
Gst_plugins_ugly10:    (1.0)c7c911b8320576429e4a4234a1e29ec7436e6814
Gst_plugins_vaapi10:   (master)7f5b9edb14245abba7cc1dad430876bee0c2ca75
Gstreamer010:          (0.10)76fc67b18c38e7f6c9cfacc4e4d0ed11d3b2c548
Gst_plugins_base010:   (0.10)1e1e6eaf3f0dd11f6618154d9739cbe3e007d206
Gst_plugins_good010:   (0.10)5af6f5bfb6c3619a9ccc3b1681579aeb90e8b89a
Gst_plugins_bad010:    (0.10)cef47d85294a0dca38631f938b81a3f0dd6891bd
Gst_plugins_ugly010:   (0.10)5ddd97ff27ffeb03298be3a02ed18e8c2674d365
Gst_plugins_vaapi010:  (0.4)90713fdc442f27b4ea449b92660a294f7796f83e
Comment 4 zhixinx.liu 2014-05-23 11:58:43 UTC
it's intel driver's issue, git bisect information is:
42258e128f19b93aa102672d5f61eb73d9f9808f is the first bad commit
commit 42258e128f19b93aa102672d5f61eb73d9f9808f
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Sat Apr 19 00:12:42 2014 +0800

    Remove unnecessary check with IS_GEN8()
    It is always true or false
    Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>

verify ENV is==>
using kernel:   3.15.0-rc5_drm-intel-nightly_f5b0cc_20140522
using X11R7:    X11R7.unstable.2014-04-15.tar.gz
and upload libva version to 0233b7f39e9f3513094d0f16151095a2528a6d3f(same with X11R7.unstable.2014-04-28's libva version )
then begin to bisect the liva_intel_driver. find the first bad commit as above.
Comment 5 haihao 2014-05-23 13:46:42 UTC
The issue is caused by CSC instead of DI.
Comment 6 haihao 2014-05-23 14:16:30 UTC
Created attachment 99642 [details] [review]
clear the surface with the right command on BLT

Could you give a try with this patch ?
Comment 7 zhixinx.liu 2014-05-26 02:26:12 UTC
>>Created attachment 99642 [details] [review] [review]
>>clear the surface with the right command on BLT

>>Could you give a try with this patch ?

    after using this patch, the issue gone.
Comment 8 haihao 2014-05-28 08:43:29 UTC
commit 0523c58148e9496927f2c3fa9a641885a0350d0f
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Mon May 26 10:36:49 2014 +0800

    VPP: i965_vpp_clear_surface() is still used for CSC on BDW
Comment 9 zhixinx.liu 2014-05-29 05:12:35 UTC
verify pass, so close it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.