VPP: i965_vpp_clear_surface() is still used for CSC on BDW

https://bugs.freedesktop.org/show_bug.cgi?id=79065

The regression is caused by commit 42258e1

Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>
(cherry picked from commit 0523c58148e9496927f2c3fa9a641885a0350d0f)